--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource-variable/dm-sans": "^5.2.5",
+    "@fontsource/dm-sans": "^5.2.5",
+    "@fontsource/eb-garamond": "^5.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.12.2",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.12.2",
+    "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.8"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
