--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource-variable/dm-sans": "^5.2.5",
     "@fontsource/dm-sans": "^5.2.5",
     "@fontsource/eb-garamond": "^5.2.5",
