--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@fontsource-variable/dm-sans": "^5.2.5",
     "@fontsource/dm-sans": "^5.2.5",
-    "@fontsource/eb-garamond": "^5.2.5",
+    "@fontsource/montserrat": "^5.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
